--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     }
   </style>
 </head>
-
 <body>
 <section class="hero is-primary is-bold">
   <div class="hero-body">
@@ -34,62 +33,19 @@
     </div>
   </div>
 </section>
-
 <form id="form" class="container m-4 pl-4" method="POST">
   <h2 class="title is-4 mt-5">Parent Information</h2>
-  <div class="field">
-    <label class="label">Full Name</label>
-    <div class="control">
-      <input class="input" type="text" name="Parent Full Name" required>
-    </div>
-  </div>
-  <div class="field">
-    <label class="label">Email</label>
-    <div class="control">
-      <input class="input" type="email" name="Parent Email" required>
-    </div>
-  </div>
-  <div class="field">
-    <label class="label">Phone Number</label>
-    <div class="control">
-      <input class="input" type="tel" name="Parent Phone" required>
-    </div>
-  </div>
-
+  <div class="field"><label class="label">Full Name</label><div class="control"><input class="input" type="text" name="Parent Full Name" required></div></div>
+  <div class="field"><label class="label">Email</label><div class="control"><input class="input" type="email" name="Parent Email" required></div></div>
+  <div class="field"><label class="label">Phone Number</label><div class="control"><input class="input" type="tel" name="Parent Phone" required></div></div>
   <h2 class="title is-4 mt-5">Participant Information</h2>
   <div id="participants-container"></div>
-  <div class="field">
-    <div class="control">
-      <button class="button is-info" type="button" onclick="addParticipant()">Add Participant</button>
-    </div>
-  </div>
-
+  <div class="field"><div class="control"><button class="button is-info" type="button" onclick="addParticipant()">Add Participant</button></div></div>
   <h2 class="title is-4 mt-5">Waiver & Consent</h2>
-  <div class="field">
-    <div class="control">
-      <textarea class="textarea" readonly>
-I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
-      </textarea>
-    </div>
-  </div>
-  <div class="field">
-    <div class="control">
-      <label class="checkbox">
-        <input type="checkbox" name="Waiver Consent" required> I have read and agree to the above waiver.
-      </label>
-    </div>
-  </div>
-
-  <div id="total-due" class="notification is-info" style="display:none; font-weight:bold; margin-top:20px;">
-    Total Due: $0
-  </div>
-
-  <div id="proceed-container" class="field mt-5">
-    <div class="control">
-      <button class="button is-warning" type="button" onclick="startPayPal()">Proceed to Payment</button>
-    </div>
-  </div>
-
+  <div class="field"><div class="control"><textarea class="textarea" readonly>I, the parent or legal guardian of the participant, give permission...</textarea></div></div>
+  <div class="field"><div class="control"><label class="checkbox"><input type="checkbox" name="Waiver Consent" required> I have read and agree to the above waiver.</label></div></div>
+  <div id="total-due" class="notification is-info" style="display:none; font-weight:bold; margin-top:20px;">Total Due: $0</div>
+  <div id="proceed-container" class="field mt-5"><div class="control"><button class="button is-warning" type="button" onclick="startPayPal()">Proceed to Payment</button></div></div>
   <div id="paypal-button-container" style="display:none;" class="mt-4"></div>
 </form>
 
@@ -108,50 +64,27 @@ function updateTotalAmount() {
 function addParticipant() {
   const container = document.getElementById('participants-container');
   const id = `participant-${Date.now()}`;
-  const index = container.children.length;
   container.insertAdjacentHTML('beforeend', `
     <div class="box mt-4" id="${id}">
       <div class="is-flex is-justify-content-space-between is-align-items-center mb-3">
-        <h3 class="title is-5">Participant ${index + 1}</h3>
+        <h3 class="title is-5">Participant ${container.children.length + 1}</h3>
         <button type="button" class="delete" onclick="removeParticipant('${id}')"></button>
       </div>
-      <div class="field">
-        <label class="label">First Name</label>
-        <div class="control">
-          <input class="input" type="text" name="Participant First Name[]" required>
-        </div>
-      </div>
-      <div class="field">
-        <label class="label">Last Name</label>
-        <div class="control">
-          <input class="input" type="text" name="Participant Last Name[]" required>
-        </div>
-      </div>
-      <div class="field">
-        <label class="label">Date of Birth</label>
-        <div class="control">
-          <input class="input" type="date" name="Participant DOB[]" required>
-        </div>
-      </div>
+      <div class="field"><label class="label">First Name</label><div class="control"><input class="input" type="text" name="Participant First Name[]" required></div></div>
+      <div class="field"><label class="label">Last Name</label><div class="control"><input class="input" type="text" name="Participant Last Name[]" required></div></div>
+      <div class="field"><label class="label">Date of Birth</label><div class="control"><input class="input" type="date" name="Participant DOB[]" required></div></div>
       <div class="field">
         <label class="label">Gender</label>
         <div class="control">
-          <label class="radio">
-            <input type="radio" name="Gender[${index}]" value="boy" required onchange="toggleSoccerLevel('${id}', true)"> Boy (Soccer)
-          </label>
-          <label class="radio">
-            <input type="radio" name="Gender[${index}]" value="girl" onchange="toggleSoccerLevel('${id}', false)"> Girl (Race)
-          </label>
+          <label class="radio"><input type="radio" name="Gender[]" value="boy" required onchange="toggleSoccerLevel('${id}', true)"> Boy (Soccer)</label>
+          <label class="radio"><input type="radio" name="Gender[]" value="girl" onchange="toggleSoccerLevel('${id}', false)"> Girl (Race)</label>
         </div>
       </div>
       <div class="field soccer-level" id="soccer-${id}">
         <label class="label">Soccer Level</label>
         <div class="control">
           <div class="select">
-            <select name="Soccer Level[]">
-              <option value="recreational">Recreational</option>
-              <option value="travel">Travel</option>
-            </select>
+            <select name="Soccer Level[]"><option value="recreational">Recreational</option><option value="travel">Travel</option></select>
           </div>
         </div>
       </div>
@@ -172,6 +105,10 @@ function toggleSoccerLevel(participantId, show) {
   const el = document.getElementById(`soccer-${participantId}`);
   if (el) {
     el.style.display = show ? 'block' : 'none';
+    const select = el.querySelector('select');
+    if (!show && select) {
+      select.value = "";
+    }
   }
 }
 
@@ -180,15 +117,10 @@ function startPayPal() {
   const parentEmail = document.querySelector('input[name="Parent Email"]').value.trim();
   const parentPhone = document.querySelector('input[name="Parent Phone"]').value.trim();
   const waiverConsent = document.querySelector('input[name="Waiver Consent"]:checked');
-
-  if (!parentName || !parentEmail || !parentPhone) {
-    alert("Please complete all Parent Information fields before proceeding to payment.");
-    return;
-  }
-
   const participantBoxes = document.querySelectorAll('#participants-container .box');
-  if (participantBoxes.length === 0) {
-    alert("Please add at least one participant before proceeding to payment.");
+
+  if (!parentName || !parentEmail || !parentPhone || !waiverConsent || participantBoxes.length === 0) {
+    alert("Please complete all Parent Information, add at least one Participant, and agree to Waiver.");
     return;
   }
 
@@ -197,16 +129,10 @@ function startPayPal() {
     const lastName = box.querySelector('input[name="Participant Last Name[]"]').value.trim();
     const dob = box.querySelector('input[name="Participant DOB[]"]').value.trim();
     const genderSelected = box.querySelector('input[name^="Gender"]:checked');
-
     if (!firstName || !lastName || !dob || !genderSelected) {
-      alert("Please fill out all fields for every participant before proceeding to payment.");
+      alert("Please fill out all fields for every participant.");
       return;
     }
-  }
-
-  if (!waiverConsent) {
-    alert("You must agree to the Waiver & Consent before proceeding to payment.");
-    return;
   }
 
   document.getElementById('proceed-container').style.display = 'none';
@@ -215,12 +141,8 @@ function startPayPal() {
   paypal.Buttons({
     createOrder: function(data, actions) {
       const participantCount = participantBoxes.length;
-      const totalAmount = participantCount * 10 || 10;
-      return actions.order.create({
-        purchase_units: [{
-          amount: { value: totalAmount.toFixed(2) }
-        }]
-      });
+      const totalAmount = participantCount * 10;
+      return actions.order.create({purchase_units: [{amount: {value: totalAmount.toFixed(2)}}]});
     },
     onApprove: function(data, actions) {
       return actions.order.capture().then(function(details) {
@@ -234,19 +156,14 @@ function sendFormData() {
   const form = document.getElementById('form');
   const formData = new FormData(form);
   const keyValuePairs = [];
-
   for (let pair of formData.entries()) {
     keyValuePairs.push(`${pair[0]}=${encodeURIComponent(pair[1])}`);
   }
-
   const formDataString = keyValuePairs.join("&");
-
   fetch("https://script.google.com/macros/s/AKfycbxxtQnrbYjg06wBU30dmORSk3ef_bDZ-Qju5vaLJXx14vM80bNKFbsOo59GA_8do0Nw/exec", {
     method: "POST",
     body: formDataString,
-    headers: {
-      "Content-Type": "text/plain;charset=utf-8",
-    }
+    headers: {"Content-Type": "text/plain;charset=utf-8"}
   }).then(response => {
     window.location.href = "thank-you.html";
   }).catch(error => {
@@ -255,6 +172,5 @@ function sendFormData() {
   });
 }
 </script>
-
 </body>
 </html>
